# simplex-architectures

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: SimplexArchitecturesConfig.cmake.in  catch2.cmake  cereal.cmake  cli11.cmake  resources.cmake  spdlog.cmake  triangle.cmake
models/: watertanks.model  watertanks_new.model
networks/: watertanks.txt
networks/watertanks/: bilinear_high.txt  bilinear_low.txt
racetracks/austria/: austria_inner.csv  austria_outer.csv  bad_states.h  faulty_waypoints.h  optimized_waypoints.h  playground.h  raceline_input.csv  raceline_output.csv  segments.h  waypoints.h
racetracks/austria_miniature/: austria_miniature_inner.csv  austria_miniature_outer.csv  bad_states.h  optimized_waypoints.h  playground.h  raceline_input.csv  raceline_output.csv  segments.h  waypoints.h
racetracks/gb_mini/: bad_states.h  gb_mini_inner.csv  gb_mini_outer.csv  optimized_waypoints.h  playground.h  raceline_input.csv  raceline_output.csv  segments.h  waypoints.h
racetracks/simpleL/: bad_states.h  optimized_waypoints.h  playground.h  raceline_input.csv  raceline_output.csv  segments.h  simpleL_inner.csv  simpleL_outer.csv  waypoints.h
results/: 220311_training  watertanks_trees
scripts/: adaptationInvocations  austria.csv  baseControllerInvocations  createACTrainingPlots.ipynb  createAnimation.ipynb  createDistancePlot.ipynb  createPlots.ipynb  createTriangulation.ipynb  runRandomIterations.sh
scripts/experiment_1/: adaptationInvocations  baseControllerInvocations
scripts/experiment_2/: adaptationInvocations  baseControllerInvocations
scripts/experiment_3/: adaptationInvocations  baseControllerInvocations
src/: CMakeLists.txt  paths.h.in  types.h
src/controller/: AbstractController.h  BaseController.h  BicycleBaseController.cpp  BicycleBaseController.h  BicycleBaseController.tpp  CarBaseController.cpp  CarBaseController.h  CarBaseController.tpp  ConstantController.h  Controller.cpp  Controller.h  ControllerUpdate.h  ControllerUtil.h  PurePursuitController.cpp  PurePursuitController.h  RLController.cpp  RLController.h  RandomCarController.cpp  RandomCarController.h  RandomController.cpp  RandomController.h  StateActionMapController.cpp  StateActionMapController.h  generateBaseController.cpp  generateBaseController.h
src/model_generation/: CMakeLists.txt  generateBaseController.cpp  generateBaseController.h  generateBicycle.cpp  generateBicycle.h  generateCarBaseController.cpp  generateCarBaseController.h  generateCarBaseController.tpp  generateCarModel.cpp  generateCarModel.h  generateCarSpecification.cpp  generateCarSpecification.h  generateCarSpecification.tpp  generateSimpleBaseController.cpp  generateSimpleBaseController.h  generateSimpleBaseController.tpp  main.cpp  util.h
src/simulation/: ActionSequenceSimulator.cpp  ActionSequenceSimulator.h  CarActionSequenceTemplate.cpp  CarActionSequenceTemplate.h  CarRepairExplorer.cpp  CarRepairExplorer.h  Executor.cpp  Executor.h  Executor.tpp  SamplingUtility.h  Simulator.cpp  Simulator.h  Simulator.tpp  Simulator_old.cpp  Simulator_old.h
src/tool/: CMakeLists.txt  tool.cpp
src/tool_car/: CMakeLists.txt  ctrlConversion.cpp  ctrlConversion.h  ctrlConversion.tpp  repair_tool.cpp  simulator.cpp  simulator_simple.cpp  tool.cpp
src/training/: CMakeLists.txt  CarTraining.h  Trainer.cpp  Trainer.h  TrainerApp.cpp  TrainingHeuristics.h  TrainingSettings.h
src/utility/: RaceTrack.cpp  RaceTrack.h  RoadSegment.cpp  RoadSegment.h  StateActionMap.h  StateActionMap.tpp  Storage.cpp  Storage.h  StorageSettings.h  composition.h  coordinate_util.h  fileExists.h  octreePlotting.cpp  octreePlotting.h  reachTreeUtility.cpp  reachTreeUtility.h  treeSerialization.cpp  treeSerialization.h
test/: CMakeLists.txt  ControllerTest.cpp  StateActionMapTest.cpp  TrainerTest.cpp
